@@ -696,7 +696,7 @@ the current value of the path.")
 
 (gnc:register-configuration-option
  (gnc:make-internal-option
-  "__new_user" "first_startup" 1))
+  "__new_user" "first_startup" #t))
 
 (gnc:register-configuration-option
  (gnc:make-internal-option
