@@ -1,3 +1,9 @@
+2001-06-16  Dave Peticolas  <dave@krondo.com>
+
+	* src/scm/prefs.scm: fix bug
+
+	* src/scm/main.scm: fix bug
+
 2001-06-15  Robert Graham Merkel  <rgmerk@mira.net>
 
 	* src/engine/Transaction.c (xaccSplitDateOrder): Fix bug -
